# templates

./: CONTRIBUTING.md  README.md  cookiecutter.json
cloud/: registry.json
cloud-go/: registry.json
cloud-go/cloud-run/: README.md
cloud-go/cloud-run-scheduled/: README.md
cloud-go/docker/: README.md
cloud-go/ecs/: README.md
cloud-go/github-actions/: README.md
cloud-go/kubernetes/: README.md
cloud-go/lambda/: README.md
cloud-go/lambda-scheduled/: README.md
cloud-rust/: registry.json
cloud-rust/cloud-run/: README.md
cloud-rust/docker/: README.md
cloud-rust/ecs/: README.md
cloud-rust/github-actions/: README.md
cloud-rust/kubernetes/: README.md
cloud-rust/lambda/: README.md
cloud-rust/lambda-scheduled/: README.md
cloud-typescript/: registry.json
cloud-typescript/cloud-run/: README.md
cloud-typescript/cloud-run-scheduled/: README.md
cloud-typescript/docker/: README.md
cloud-typescript/ecs/: README.md
cloud-typescript/github-actions/: README.md
cloud-typescript/kubernetes/: README.md
cloud-typescript/lambda/: README.md
cloud-typescript/lambda-scheduled/: README.md
cloud/alibaba-cloud/: README.md
cloud/alibaba-fc/: Dockerfile  README.md  handler.py  s.yaml
cloud/app-runner/: README.md
cloud/aws-batch/: README.md
cloud/azure-container/: container-app.yaml
cloud/azure-container-instances/: README.md
cloud/azure-functions/: function.json
cloud/azure-logic-apps/: README.md
cloud/azure-queue-trigger/: README.md
cloud/civo/: README.md
cloud/cloud-functions/: README.md
cloud/cloud-run/: cloudbuild.yaml
cloud/cloud-run-scheduled/: scheduler.yaml
cloud/cloud-tasks/: README.md
cloud/cloud-workflows/: README.md
cloud/cloudflare-workers/: README.md
cloud/coolify/: README.md
cloud/digital-ocean/: app.yaml
cloud/docker/: docker-compose.yml
cloud/ecs/: task-definition.json
cloud/ecs-scheduled/: template.yaml
cloud/github-actions/: README.md
cloud/gitlab-ci/: README.md
deploy/: registry.json
hooks/: constants.py  post_gen_project.py
{{cookiecutter.project_name}}/: README.md  pyproject.toml
{{cookiecutter.project_name}}/tests/: test_workflow.py
{{cookiecutter.project_name}}/{{cookiecutter.module_name}}/: actions.py  workflow.py
(+23 files in other folders)
